2003-09-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkkeyval.c: Add Gdk::Keyval.to_unicode, .from_unicode. 
	* src/rbgdkatom.c: Add Gdk::Atom.new, GDK_NONE.
	* src/rbgtkdrag.c (Init_gtk_drag): 
	Gtk::Drag.find_target -> Gtk::Drag.dest_find_target. 
	     Accept nil for 3rd parameter.
	Gtk::Drag.get_target_list -> Gtk::Drag.dest_get_target_list.
	     Fix a segfault when returned NULL.
	Gtk::Drag.set_target_list -> Gtk::Drag.dest_set_target_list.
	     Fix a segfault when returned NULL.
	* src/rbgtkselectiondata.c: Remove Gtk::SelectionData.text=.
	Gtk::SelectionData.set_text returns true or false.
	Fix memory reaks of Gtk::SelectionData.text, Gtk::SelectionData.targets.

2003-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtknotebook.c: Imprement Gtk::Notebook#set_page explicitly.
   	Because "page" property doesn't accept negative value.

2003-09-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkclipboard.c: Rename Gtk::Clipboard.new to Gtk::Clipboard.get.
	Gtk::Clipboard#set_with_data to Gtk::Clipboard#set. Remove Gtk::Clipboard#owner.
	* src/rbgtktreeiter.c: Gtk::TreeIter#[key]=val returns val.

2003-09-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkaccelgroup.c, rbgtkaccelmap.c: Fix a compatibility 
	for Gtk::AccelGroup, Gtk::AccelMap.

2003-09-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/gtk-demo/tree_store.rb: Fix handling of block argument for ruby-1.8.
	* sample/gtk-demo/editable_cells.rb: Fix segfault of removing items action.
	
2003-09-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtklabel.c: Add Gtk::Label#markup=. 
	Gtk::Label#text=(str) returns str.
	* src/rbgdkdisplaymanager.c: GTK+-2.2.0 or later only. 

2003-09-03  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* sample/gtk-demo/main.rb (Demo::Main#create_tree): fix handling of
	block argument to work with latest ruby-1.8.

2003-09-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdialog.c, rbgtkmessagedialog.c, rbgtkwindow.c, rbgtkimage.c, 